--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ main {
 }
 
 header {
-    background-color: #A2D7D2;
+    background-color: #0bc3b1;
     height: 110px;
     padding: 0 30px;
     display: flex;
@@ -31,8 +31,18 @@ h1 {
 }
 
 footer {
-    background-color: #FAF0EA;
+    background-color: #000000;
     padding: 10px;
+    color: white;
+}
+button {background-color: black;
+color: white;
+border-radius: 20px;}
+
+input {
+    background-color: black;
+    color: white;
+    border-radius: 30px;
 }
 .input {
     padding: 3rem;
@@ -41,11 +51,13 @@ footer {
     justify-content: center;
     align-items: center;
 }
-#center-items{
+.center-column{
     display: flex;
     justify-content: center;
     align-items: center;
+    align-content: center;
 }
+
 #even-pic{
     height: 200px;
 }
