--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,12 +33,25 @@ footer {
 }
 button {background-color: black;
 color: white;
-border-radius: 20px;}
+border-radius: 20px;
+display: flex;
+margin-left: auto;
+margin-right: auto;
+font-size: 60px;
+
+
+
+}
 
 input {
     background-color: black;
     color: white;
-    border-radius: 30px;
+    border: solid white 5px;
+    box-shadow: 5px 5px 5px black;
+    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    font-size: 2rem;
 }
 .input {
     padding: 3rem;
@@ -66,4 +79,11 @@ input {
 }
 .hidden2 {
     display: none;
+}
+
+#answer {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    font-size: 2rem;
 }
