--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,9 +69,13 @@ input {
 
 #even-pic{
     height: 200px;
+    box-shadow: 5px 5px 5px;
+    border-radius: 10%;
 }
 #odd-pic{
     height: 220px;
+    box-shadow: 5px 5px 5px;
+    border-radius: 10%;
     
 }
 .hidden {
